--- a/social_site/templates/base.html
+++ b/social_site/templates/base.html
@@ -32,23 +32,33 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Lista utenti</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Registrazione</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-              </li>
+              
+
+              
+              {% if request.user.is_authenticated %}
+                
+              
+                
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Menu
+                  {{ request.user.username }}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Profilo</a></li>
+                  <li><a class="dropdown-item" href="{% url 'password_change' %}">Aggiorna password</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Esci</a></li>
+                  {% else %}
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'registration_view' %}">Registrazione</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
                 </ul>
               </li>
+              {% endif %}
             </ul>
            
           </div>
