--- a/social_site/templates/registration/password_change_form.html
+++ b/social_site/templates/registration/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block head_title %}
-           {{block.super}} - Registrati sul forum
+           {{block.super}} - Cambio password
 {% endblock head_title %}
 
 {% block content %}
@@ -9,11 +9,11 @@
 <div class="row justify-content-center mt-4">
 
     <div class="col-6 text-center">
-        <h2>Registrati sul forum</h2>
+        <p>Inserisci la password attuale per ragioni di sicurezza e poi la nuova password due volte</p>
         <form method="post" novalidate>
             {% csrf_token %}
             {{ form|crispy }}
-            <input type="submit" class="btn btn-info" value="Crea Account">
+            <input type="submit" class="btn btn-info" value="Reset password">
         </form>
     </div>
 
