--- a/social_site/templates/base.html
+++ b/social_site/templates/base.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">AGORA</a>
+          <a class="navbar-brand" href="/">AGORA</a>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Cosa stai cercando?" aria-label="Search">
             <button class="btn btn-outline-info" type="submit">Cerca</button>
@@ -30,7 +30,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Lista utenti</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'users_list' %}">Lista utenti</a>
               </li>
               
 
@@ -44,7 +44,7 @@
                   {{ request.user.username }}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Profilo</a></li>
+                  <li><a class="dropdown-item" href="{% url 'user_profile' username=request.user.username %}">Profilo</a></li>
                   <li><a class="dropdown-item" href="{% url 'password_change' %}">Aggiorna password</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="{% url 'logout' %}">Esci</a></li>
