--- a/social_site/core/templates/core/homepage.html
+++ b/social_site/core/templates/core/homepage.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Homepage</h1>
+    
+    <div class="my-4">
+
+   
+    {% for sezione in lista_sezioni  %}
+        <h5><a href="{{ sezione.get_absolute_url }}"><strong>{{ sezione.nome_sezione }}</strong></a></h5>
+        
+        <p>{{ sezione.descrizione }}</p>
+        <img src="{{ sezione.logo_sezione.url }}" alt="logo della sezione" height="200px">   
+        <hr>     
+    {% endfor %}
+        
+</div>
+
+
+
 {% endblock content %}
     
