--- a/social_site/templates/base.html
+++ b/social_site/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,6 +9,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Font google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet"> 
+
+    <!-- Personal css -->
+    <link rel="stylesheet" href="{% static 'css/agora.css' %}">
     <title>
         
         {% block head_title %}
@@ -64,9 +72,13 @@
           </div>
         </div>
       </nav>
-    {% block content %}
 
-    {% endblock content %}
+      <section class="container">
+        {% block content %}
+
+        {% endblock content %}
+      </section>
+    
     
 
     <!-- Optional JavaScript; choose one of the two! -->
