--- a/social_site/core/templates/core/users.html
+++ b/social_site/core/templates/core/users.html
@@ -8,11 +8,41 @@
 
 {% block content %}
 
-<h2>Lista utenti</h2>
-
+<h2 class="mt-3">Lista utenti</h2>
+<hr>
 {% for utente in object_list  %}
 
-    <p><a href="{% url 'user_profile' username=utente.username %}"><strong>@{{ utente.username }}</strong></a></p>
+    
+    {% if forloop.first %}
+        <div class="row">    
+    {% endif %}
+    
+    <div class="col-lg-4">
+        <div class="card my-1 border border-info">
+            <div class="card-body py-0">
+                <p>
+                    <a href="{% url 'user_profile' username=utente.username %}">
+                        <strong>@{{ utente.username }}</strong>
+                    </a>
+                </p>
+                Iscrizione: {{ utente.date_joined|date:"d M Y" }}
+                <br>
+                Post: {{ utente.posts.count }}
+                <br>
+                Discussioni: {{ utente.discussioni.count }}
+            </div>
+        </div>
+    </div>
+
+    
+    {% if forloop.counter|divisibleby:"3" or forloop.last %}
+        </div>
+    {% endif %}
+
+    {% if forloop.counter|divisibleby:"3" and not forloop.last %}
+        <div class="row">
+    {% endif %}
+        
     
 {% endfor %}
     
