--- a/social_site/forum/templates/forum/singola_discussione.html
+++ b/social_site/forum/templates/forum/singola_discussione.html
@@ -10,16 +10,37 @@
     
     {% for post in post_discussione  %}
 
-        <h1>{{ discussione.titolo }}</h1>
-        <h2>{{ discussione.data_creazione }}</h2>
-        <h3>in: {{ discussione.sezione_appartenenza }}</h3>
-        
-        <div class="card my-3">
-            <div class="card-header">
-                <h3>{{ post.autore_post }}</h3>
-                <h3>{{ post.data_creazione }}</h3>
-                <h3>{{post.contenuto}}</h3>
+    <div class="card my-3">
+        {% if forloop.first %}
+        <div class="card-header">
+            <h3>{{ discussione.titolo }}</h3>
+            <p class="text-muted">{{ discussione.data_creazione|date:"D d M Y" }}
+            <br>
+            in: {{ discussione.sezione_appartenenza }}</p>
+        </div>
+        {% else %}
+        <div class="card-header py-0">
+            
+            <p class="text-muted mb-0">
+                {{ post.data_creazione|date:"D d M Y"  }}
+            </p>
+        </div>
+        {% endif %}
+            
+        <div class="card-body">
+
+            <div class="row">
+                <div class="col-xl-2 col-4">
+                    <p class="mb-0"><a href="{% url 'user_profile' username=post.autore_post.username %}"><strong>{{ post.autore_post }} </strong></a></p>       
+                    <p class="text-muted mb-0">Utente da: {{ post.autore_post.date_joined|date:"M Y" }}</p>             
+                    <p class="text-muted">Post: {{ post.autore_post.posts.count }}</p>             
+                </div>
+                <div class="col-xl-10 col-8">
+                    <p class="my-0">{{post.contenuto|linebreaks}}</p>                    
+                </div>
             </div>
+        </div>
+
         </div>
     {% endfor %}
 
