--- a/social_site/templates/base.html
+++ b/social_site/templates/base.html
@@ -28,8 +28,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/">AGORA</a>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Cosa stai cercando?" aria-label="Search">
+          <form class="d-flex" action="{% url 'funzione_cerca' %}">
+            <input name="q"  class="form-control me-2" type="search" placeholder="Cosa stai cercando?" aria-label="Search">
             <button class="btn btn-outline-info" type="submit">Cerca</button>
           </form>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
